# ConwaysGOL

./: CMakeLists.txt  README.md
include/: Application.h  Button.h  Cell.h  Config.h  Grid.h
src/: Application.cpp  Button.cpp  Cell.cpp  Grid.cpp  main.cpp
